--- a/PrimeValLife.Web/Views/Shared/_Layout.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_Layout.cshtml
@@ -105,7 +105,7 @@
                                     </div>
                                 </div>
                                 <div class="header-action-icon-2">
-                                    <a href="page-account.html">
+                                    <a asp-controller="Dashboard" asp-action="Index">
                                         <img class="svgInject" alt="Nest" src="assets/imgs/theme/icons/icon-user.svg" />
                                     </a>
                                     <a asp-controller="Dashboard" asp-action="Index"><span class="lable ml-0">Account</span></a>
@@ -115,8 +115,6 @@
                                             <ul>
                                                 <li><a asp-controller="Dashboard" asp-action="Index"><i class="fi fi-rs-user mr-10"></i>My Account</a></li>
                                                 <li><a href="page-account.html"><i class="fi fi-rs-location-alt mr-10"></i>Order Tracking</a></li>
-                                                <li><a href="page-account.html"><i class="fi fi-rs-label mr-10"></i>My Voucher</a></li>
-                                                <li><a href="shop-wishlist.html"><i class="fi fi-rs-heart mr-10"></i>My Wishlist</a></li>
                                                 <li><a href="page-account.html"><i class="fi fi-rs-settings-sliders mr-10"></i>Setting</a></li>
                                                 <li><a asp-controller="Account" asp-action="Logout"><i class="fi fi-rs-sign-out mr-10"></i>Sign out</a></li>
                                             </ul>
