--- a/PrimeValLife.Web/Views/Orders/OrdersCheckOut.cshtml
+++ b/PrimeValLife.Web/Views/Orders/OrdersCheckOut.cshtml
@@ -187,7 +187,18 @@
                                         <input required type="password" id="passwordAttached" placeholder="Password" name="password">
                                     </div>
                                 </div>
-                        </div>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="d-none form-group">
+                                <div class="checkbox">
+                                    <div class="custome-checkbox">
+                                        <input class="form-check-input" type="checkbox" name="checkbox" id="createaccount" disabled>
+                                        <label class="form-check-label label_info" data-bs-toggle="collapse" href="#collapsePassword" data-target="#collapsePassword" aria-controls="collapsePassword" for="createaccount"><span>Create an account?</span></label>
+                                    </div>
+                                </div>
+                            </div>
                         }
                         <div class="ship_detail">
                             <div class="form-group">
