--- a/PrimeValLife.Web/Views/Home/Index.cshtml
+++ b/PrimeValLife.Web/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@
                         <div class="tab-pane fade" id="tab-two-1" role="tabpanel" aria-labelledby="tab-two-1">
                             <div class="carausel-4-columns-cover arrow-center position-relative">
                                 <div class="slider-arrow slider-arrow-2 carausel-4-columns-arrow" id="carausel-4-columns-2-arrows"></div>
-                                <div class="carausel-4-columns carausel-arrow-center" id="carausel-4-columns-2">
+                                <div id="productList"class="carausel-4-columns carausel-arrow-center" id="carausel-4-columns-2">
                                     <div class="product-cart-wrap">
                                         <div class="product-img-action-wrap">
                                             <div class="product-img product-img-zoom">
@@ -478,3 +478,6 @@
     </section>
     <!--End Best Sales-->
 </main>
+@section Scripts{
+    <script src="~/js/home/index.js"></script>
+}
