--- a/PrimeValLife.Web/Views/Shared/_Global.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_Global.cshtml
@@ -8,4 +8,6 @@
     const confirmShippingInfoUrl = "Orders/CreateShippingInfo"
     const directCheckOutUrl = "api/Products/directCheckOut"
     const addToCartUrl = "api/OrdersApi/AddToCart"
+    const getActiveCartItemsUrl = "api/OrdersApi/GetActiveCartItems"
+    const removeCartItemUrl = "api/OrdersApi/RemoveItemFromCart"
 </script>
