--- a/PrimeValLife.Web/Views/Shared/_FloatingCart.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_FloatingCart.cshtml
@@ -1,13 +1,16 @@
-﻿<div id="floatingCart" class="cart-dropdown-wrap cart-dropdown-hm2">
+﻿<div id="floatingCart" class="cart-dropdown-wrap cart-dropdown-hm2 " >
     <ul id="cartItemList">
-        
+        <li class="placeholder">Item</li>
     </ul>
     <div class="shopping-cart-footer">
         <div class="shopping-cart-total">
-            <h4>Total <span id="cartTotal">$4000.00</span></h4>
+            <h4 class="">Total <span class="placeholder" id="cartTotal">$4000.00</span></h4>
         </div>
         <div class="shopping-cart-button">
-            <a href="@Url.Action("OrdersCheckout","Orders")">Checkout</a>
+            <a class="placeholder" href="@Url.Action("OrdersCheckout","Orders")">Checkout</a>
         </div>
     </div>
+</div>
+<div>
+
 </div>
