--- a/PrimeValLife.Web/Views/Shared/_FloatingCart.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_FloatingCart.cshtml
@@ -1,16 +1,13 @@
-﻿<div id="floatingCart" class="cart-dropdown-wrap cart-dropdown-hm2 " >
-    <ul id="cartItemList">
-        <li class="placeholder">Item</li>
+﻿<div id="floatingCart" class="cart-dropdown-wrap cart-dropdown-hm2" >
+    <ul id="cartItemList" class=" col-12">
+        <li class=""></li>
     </ul>
-    <div class="shopping-cart-footer">
+    <div class="shopping-cart-footer col-12">
         <div class="shopping-cart-total">
-            <h4 class="">Total <span class="placeholder" id="cartTotal">$4000.00</span></h4>
+            <h4 class="">Total <span class="currency" id="cartTotal">0.00</span></h4>
         </div>
         <div class="shopping-cart-button">
-            <a class="placeholder" href="@Url.Action("OrdersCheckout","Orders")">Checkout</a>
+            <a class="" href="@Url.Action("OrdersCheckout","Orders")">Checkout</a>
         </div>
     </div>
-</div>
-<div>
-
 </div>
