--- a/PrimeValLife.Web/Views/Shared/_Global.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_Global.cshtml
@@ -10,4 +10,6 @@
     const addToCartUrl = "api/OrdersApi/AddToCart"
     const getActiveCartItemsUrl = "api/OrdersApi/GetActiveCartItems"
     const removeCartItemUrl = "api/OrdersApi/RemoveItemFromCart"
+    const searchUrl = "api/ProductsApi/search"
+    const shopUrl = "/Products/Shop"
 </script>
