--- a/PrimeValLife.Web/Views/Shared/_Layout.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/imgs/theme/favicon.svg" />
     <!-- Template CSS -->
+    <link href="~/assets/css/plugins/unibox.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/plugins/slider-range.css" />
     <link rel="stylesheet" href="assets/css/main.css?v=5.6" />
     <link href="~/assets/css/pv-style.css" rel="stylesheet" />
@@ -46,7 +47,13 @@
                                         <li>
                                             <a href="page-contact.html">Contact</a>
                                         </li>
+                                        <li class="w-50">
+                                            <div >
+                                                <input type="text" id="globalSearch" placeholder="Search for items..." />
+                                            </div>
+                                        </li>
                                     </ul>
+                                    
                                 </nav>
                             </div>
 
@@ -487,6 +494,7 @@
     <script src="assets/js/plugins/jquery.vticker-min.js"></script>
     <script src="assets/js/plugins/jquery.theia.sticky.js"></script>
     <script src="assets/js/plugins/jquery.elevatezoom.js"></script>
+    <script src="~/assets/js/plugins/unibox.min.js"></script>
     <!-- Template  JS -->
     <script src="./assets/js/main.js?v=5.6"></script>
     <script src="./assets/js/shop.js?v=5.6"></script>
