Dashboard USer Orders

--- a/PrimeValLife.Web/Views/Dashboard/_Dashboard.cshtml
+++ b/PrimeValLife.Web/Views/Dashboard/_Dashboard.cshtml
@@ -5,8 +5,8 @@
         </div>
         <div class="card-body">
             <p>
-                From your account dashboard. you can easily check &amp; view your <a href="#">recent orders</a>,<br />
-                manage your <a href="#">shipping and billing addresses</a> and <a href="#">edit your password and account details.</a>
+                From your account dashboard. you can easily check &amp; view your <a href="#orders">recent orders</a>,<br />
+                manage your <a href="#address">shipping and billing addresses</a> and <a href="#account-detail">edit your password and account details.</a>
             </p>
         </div>
     </div>
