--- a/PrimeValLife.Web/Views/Dashboard/_Orders.cshtml
+++ b/PrimeValLife.Web/Views/Dashboard/_Orders.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="tab-pane fade" id="orders" role="tabpanel" aria-labelledby="orders-tab">
+﻿@using PrimeValLife.Web.Models.Dashboard
+@using TUT.Utilities.Methods
+@model List<OrderViewModel>
+
+<div class="tab-pane fade" id="orders" name="orders" role="tabpanel" aria-labelledby="orders-tab">
     <div class="card">
         <div class="card-header">
             <h3 class="mb-0">Your Orders</h3>
@@ -16,27 +20,16 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>#1357</td>
-                            <td>March 45, 2020</td>
-                            <td>Processing</td>
-                            <td>$125.00 for 2 item</td>
-                            <td><a href="#" class="btn-small d-block">View</a></td>
-                        </tr>
-                        <tr>
-                            <td>#2468</td>
-                            <td>June 29, 2020</td>
-                            <td>Completed</td>
-                            <td>$364.00 for 5 item</td>
-                            <td><a href="#" class="btn-small d-block">View</a></td>
-                        </tr>
-                        <tr>
-                            <td>#2366</td>
-                            <td>August 02, 2020</td>
-                            <td>Completed</td>
-                            <td>$280.00 for 3 item</td>
-                            <td><a href="#" class="btn-small d-block">View</a></td>
-                        </tr>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>#@item.OrderId</td>
+                                <td>@item.OrderDate</td>
+                                <td>@item.Status.GetDescription()</td>
+                                <td><span class="currency">@item.TotalPrice.ToString("0.00")</span> for @item.TotalQuantity item</td>
+                                <td><a href="" class="btn-small d-block">View</a></td>
+                            </tr>
+                        }
                     </tbody>
                 </table>
             </div>
