--- a/PrimeValLife.Web/Views/Home/Index.cshtml
+++ b/PrimeValLife.Web/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="section-title wow animate__animated animate__fadeIn">
                 <h3 class="">Daily Best Sells</h3>
-                <ul class="nav nav-tabs links" id="myTab-2" role="tablist">
+                @* <ul class="nav nav-tabs links" id="myTab-2" role="tablist">
                     <li class="nav-item" role="presentation">
                         <button class="nav-link active" id="nav-tab-one-1" data-bs-toggle="tab" data-bs-target="#tab-one-1" type="button" role="tab" aria-controls="tab-one" aria-selected="true">Featured</button>
                     </li>
@@ -40,14 +40,14 @@
                     <li class="nav-item" role="presentation">
                         <button class="nav-link" id="nav-tab-three-1" data-bs-toggle="tab" data-bs-target="#tab-three-1" type="button" role="tab" aria-controls="tab-three" aria-selected="false">New added</button>
                     </li>
-                </ul>
+                </ul> *@
             </div>
             <div class="row">
                 <div class="col-lg-3 d-none d-lg-flex wow animate__animated animate__fadeIn">
                     <div class="banner-img style-2">
                         <div class="banner-text">
                             <h2 class="mb-100">Bring nature into your home</h2>
-                            <a href="shop-grid-right.html" class="btn btn-xs">Shop Now <i class="fi-rs-arrow-small-right"></i></a>
+                            <a href="@Url.Action("index","home")" class="btn btn-xs">Shop Now <i class="fi-rs-arrow-small-right"></i></a>
                         </div>
                     </div>
                 </div>
