--- a/PrimeValLife.Web/Views/Orders/OrdersCheckOut.cshtml
+++ b/PrimeValLife.Web/Views/Orders/OrdersCheckOut.cshtml
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="breadcrumb">
                 <a href="index.html" rel="nofollow"><i class="fi-rs-home mr-5"></i>Home</a>
-                <span></span> Shop
+@*                 <span></span> Shop *@
                 <span></span> Checkout
             </div>
         </div>
