--- a/PrimeValLife.Web/Views/Orders/_Cart.cshtml
+++ b/PrimeValLife.Web/Views/Orders/_Cart.cshtml
@@ -8,7 +8,7 @@
 </div>
 <div class="d-flex align-items-end justify-content-between">
     <div>
-        <div class="table-responsive shopping-summery">
+        <div class="table-responsive shopping-summery" id="cart">
             <table class="table table-wishlist">
                 @* <thead>
                     <tr class="main-heading">
