--- a/PrimeValLife.Web/Views/Orders/_CartProduct.cshtml
+++ b/PrimeValLife.Web/Views/Orders/_CartProduct.cshtml
@@ -36,5 +36,5 @@
             @string.Format("{0:F2}", Model.Product.Price * Model.Quantity)
         </h5>
     </td>
-    <td class="action text-center" data-title="Remove"><a href="#" id="removeFromCart" class="text-body"><i class="fi-rs-trash"></i></a></td>
+    <td class="action text-center" data-title="Remove"><i class="fi-rs-trash"><a data-target="@Model.CartItemId" class="removeCitem text-body"></a></i></td>
 </tr>
