--- a/PrimeValLife.Web/Views/Home/Index.cshtml
+++ b/PrimeValLife.Web/Views/Home/Index.cshtml
@@ -9,7 +9,17 @@
             <div class="home-slide-cover mt-30">
                 <div class="hero-slider-1 style-4 dot-style-1 dot-style-1-position-1">
                     <div class="single-hero-slider single-animation-wrap" style="background-image: url(assets/imgs/slider/slider-1.png)">
-
+                        <div class="slider-content">
+                            <h1 class="display-2 mb-40">
+                                Don’t miss amazing<br />
+                                deals
+                            </h1>
+                            <p class="mb-65">Sign up for the daily newsletter</p>
+                            <form class="form-subcriber d-flex">
+                                <input type="email" placeholder="Your emaill address" />
+                                <button class="btn" type="submit">Subscribe</button>
+                            </form>
+                        </div>
                     </div>
                     <div class="single-hero-slider single-animation-wrap" style="background-image: url(assets/imgs/slider/slider-2.png)">
                         
