--- a/PrimeValLife.Web/Views/Shared/_Global.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_Global.cshtml
@@ -12,4 +12,5 @@
     const removeCartItemUrl = "api/OrdersApi/RemoveItemFromCart"
     const searchUrl = "api/ProductsApi/search"
     const shopUrl = "/Products/Shop"
+    const addressRequestUrl = "api/OrdersApi/getAddressList"
 </script>
