--- a/PrimeValLife.Web/Views/Orders/OrdersCheckOut.cshtml
+++ b/PrimeValLife.Web/Views/Orders/OrdersCheckOut.cshtml
@@ -120,8 +120,9 @@
             </div>
             <div class="col-lg-5">
                 <div class="row">
-                    <h4 class="mb-30">Billing Details</h4>
-                    <form id="CheckOutForm">
+
+                    @* <form id="CheckOutForm">
+                        <h4 class="mb-30"><a href="Dashboard/#address-tab" data-bs-toggle="popover" data-bs-trigger="hover focus" data-bs-title="Address" data-bs-content="@Model.BillingAddress.FName @Model.BillingAddress.LName,@Model.BillingAddress.AddressLine1,@Model.BillingAddress.City">Billing Details</a></h4>
                         <div class="row">
                             <div class="form-group col-lg-6">
                                 <input type="text" required="" id="billingFName" name="fname" placeholder="First name *">
@@ -253,7 +254,117 @@
                                 </div>
                             </div>
                         </div>
-                    </form>
+                    </form> *@
+                    <div class="card p-3">
+  <div class="accordian" id="addressAcc">
+    <div class="accordion-item">
+      <h2 class="accordion-header">
+        <button class="accordion-button btn collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#billingAddressContainer" aria-expanded="true" aria-controls="billingAddressContainer">
+          Billing Info
+        </button>
+      </h2>
+      <div id="billingAddressContainer" data-bs-parent="#addressAcc" class="accordion-collapse collapse">
+        <div class="accordion-body">
+          <ul id="billingAddressList" style="list-style-type:none;">
+            <li>
+              <div class="d-flex flex-row card p-3 m-1 ">
+                <div class="align-self-center">
+                  <input class="form-check-input top-0 start-0 mt-3 ms-3" type="radio" name="address" id="address2">
+                </div>
+                <div class="ms-4 ml-4">
+                  <h5 class="mb-3"><span>FName</span> <span>LName</span></h5>
+                  <address class="mb-2">
+                    AddressLine 1<br>
+                    AddressLine 2<br>
+                    City, State, PostalCode<br>
+                    Phone no
+                  </address>
+                <a class="modify-address" data-address-target="" data-bs-toggle="modal" data-bs-target="#addressModal">Modify</a>
+                </div>
+              </div>
+            </li>
+          </ul>
+          
+          <!-- Second Address with Radio Button -->
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button btn" type="button" data-bs-toggle="collapse" data-bs-target="#shippingAddressContainer" aria-expanded="true" aria-controls="shippingAddressContainer">
+        Shipping 
+      </button>
+    </h2>
+    <div id="shippingAddressContainer" data-bs-parent="#addressAcc" class="accordion-collapse collapse show">
+      <div class="accordion-body">
+        <ul id="shippingAddressList" style="list-style-type:none;">
+          <li>
+            <div class="d-flex flex-row card p-3 m-1 ">
+              <div class="align-self-center">
+                <input class="form-check-input top-0 start-0 mt-3 ms-3" type="radio" name="address" id="address2">
+              </div>
+              <div class="ms-4 ml-4">
+                <h5 class="mb-3"><span>FName</span> <span>LName</span></h5>
+                <address class="mb-2">
+                  AddressLine 1<br>
+                  AddressLine 2<br>
+                  City, State, PostalCode<br>
+                  Phone no
+                </address>
+                 <a class="modify-address" data-address-target="" data-bs-toggle="modal" data-bs-target="#addressModal">Modify</a>
+              </div>
+            </div>
+          </li>
+                                            
+        </ul>
+        <!-- Second Address with Radio Button -->
+      </div>
+                                    <a class="btn btn-outline-success" data-address-target="0" data-bs-toggle="modal" href="#addressModal" role="button" aria-expanded="false" aria-controls="addressModal">
+                                        Add New Address
+                                    </a>
+
+                                    <div class="modal fade" id="addressModal">
+                                        <!-- Example Code -->
+                                        <div class="modal-dialog">
+                                            <div class="modal-content p-3">
+                                        <div class="d-flex justify-content-between">
+                                            <div class="form-floating mb-3 w-50">
+                                                <input type="text" class="form-control border-0 border-bottom" id="firstName" placeholder="First">
+                                                <label for="floatingInput">First Name</label>
+                                            </div>
+                                            <div class="form-floating w-50">
+                                                <input type="text" class="form-control border-0 border-bottom" id="lastName" placeholder="Password">
+                                                <label for="floatingPassword">Last Name</label>
+                                            </div>
+                                        </div>
+                                        <div class="form-floating  mb-3">
+                                            <input type="text" class="form-control border-0 border-bottom" id="address1" placeholder="Address">
+                                            <label for="floatingPassword">Address</label>
+                                        </div>
+                                        <div class="form-floating  mb-3">
+                                            <input type="text" class="form-control border-0 border-bottom" id="city" placeholder="Address">
+                                            <label for="floatingPassword">City</label>
+                                        </div>
+                                        <div class="d-flex justify-content-between">
+                                            <div class="form-floating mb-3 w-50">
+                                                <input type="text" class="form-control border-0 border-bottom" id="state" placeholder="First">
+                                                <label for="floatingInput">State</label>
+                                            </div>
+                                            <div class="form-floating w-50">
+                                                <input type="text" class="form-control border-0 border-bottom" id="postalCode" placeholder="Password">
+                                                <label for="floatingPassword">Postal code</label>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                        <button class="btn btn-success ms-3"id="btnSaveAddress">Save Address</button>
+                                        </div>
+                                            </div>
+                                        </div>
+                                    </div>
+    </div>
+  </div>
+  </div>
+</div>
                 </div>
                 
                 
