--- a/PrimeValLife.Web/Views/Shared/_Global.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_Global.cshtml
@@ -12,5 +12,7 @@
     const removeCartItemUrl = "api/OrdersApi/RemoveItemFromCart"
     const searchUrl = "api/ProductsApi/search"
     const shopUrl = "/Products/Shop"
-    const addressRequestUrl = "api/OrdersApi/getAddressList"
+    const addressRequestUrl = "api/OrdersApi/getUserAddress"
+    const getAddressUrl = "api/OrdersApi/getAddress"
+    const saveAddressUrl = "api/OrdersApi/saveAddress"
 </script>
