--- a/PrimeValLife.Web/Views/Shared/_Global.cshtml
+++ b/PrimeValLife.Web/Views/Shared/_Global.cshtml
@@ -15,4 +15,5 @@
     const addressRequestUrl = "api/OrdersApi/getUserAddress"
     const getAddressUrl = "api/OrdersApi/getAddress"
     const saveAddressUrl = "api/OrdersApi/saveAddress"
+    const createAccountUrl = "api/OrdersApi/createAccount"
 </script>
