--- a/PrimeValLife.Web/Views/Orders/OrdersCheckOut.cshtml
+++ b/PrimeValLife.Web/Views/Orders/OrdersCheckOut.cshtml
@@ -4,7 +4,7 @@
     <div class="page-header breadcrumb-wrap">
         <div class="container">
             <div class="breadcrumb">
-                <a href="index.html" rel="nofollow"><i class="fi-rs-home mr-5"></i>Home</a>
+                <a href="@Url.Action("index","home")" rel="nofollow"><i class="fi-rs-home mr-5"></i>Home</a>
                 @*                 <span></span> Shop *@
                 <span></span> Checkout
             </div>
@@ -109,7 +109,7 @@
                                             <h6 class="text-muted">Total</h6>
                                         </td>
                                         <td class="cart_total_amount">
-                                            <h4 class="text-brand text-end" id="netPayment">1220</h4>
+                                            <h4 class="text-brand text-end currency" id="netPayment">0.00</h4>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -258,6 +258,10 @@
                     </form> *@
                     <div class="card p-3">
                         <div class="accordian" id="addressAcc">
+                            @if (!User.Identity.IsAuthenticated)
+                            {
+                               Html.RenderPartial("_QuickAccount");
+                            }
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button btn " type="button" data-bs-toggle="collapse" data-bs-target="#billingAddressContainer" aria-expanded="true" aria-controls="billingAddressContainer">
@@ -288,6 +292,9 @@
 
                                         <!-- Second Address with Radio Button -->
                                     </div>
+                                    <a class="btn btn-outline-success" data-address-target="0" data-address-type="BILLING" data-bs-toggle="modal" href="#addressModal" role="button" aria-expanded="false" aria-controls="addressModal">
+                                        Add New Address
+                                    </a>
                                 </div>
                             </div>
                             <div class="accordion-item">
@@ -320,7 +327,7 @@
                                         </ul>
                                         <!-- Second Address with Radio Button -->
                                     </div>
-                                    <a class="btn btn-outline-success" data-address-target="0" data-bs-toggle="modal" href="#addressModal" role="button" aria-expanded="false" aria-controls="addressModal">
+                                    <a class="btn btn-outline-success" data-address-target="0" data-address-type="SHIPPING" data-bs-toggle="modal" href="#addressModal" role="button" aria-expanded="false" aria-controls="addressModal">
                                         Add New Address
                                     </a>
 
