--- a/PrimeValLife.Web/Views/Orders/_CartProduct.cshtml
+++ b/PrimeValLife.Web/Views/Orders/_CartProduct.cshtml
@@ -32,7 +32,7 @@
     </td>
     <td class="price" data-title="Price">
         
-        <h5 id="totalPrice" class="text-brand currency">
+        <h5 id="totalPrice" class=" totalPrice text-brand currency">
             @string.Format("{0:F2}", Model.Product.Price * Model.Quantity)
         </h5>
     </td>
